# SPOASR_lab2

lab2_accomplice/: CMakeLists.txt  package.xml
lab2_accomplice/src/: accomplice (copy).cpp  accomplice.cpp
lab2_message/: CMakeLists.txt  package.xml
lab2_message/msg/: Message1.msg
lab2_scout/: CMakeLists.txt  package.xml
lab2_scout/src/: scout (copy).cpp  scout.cpp
